<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spotify Streamer</string>
    <string name="action_settings">Settings</string>
    <string name="msg_no_result">No artists found</string>
    <string name="img_artist_description">Thumbnails</string>
    <string name="title_activity_top_ten">Top 10 Tracks</string>
    <string name="pref_country_code_key">iso_code</string>
    <string name="pref_country_code_title">Country Code</string>
    <string name="pref_country_code_default">US</string>
    <string name="title_activity_settings">Settings</string>
    <string name="extra_artist_id_key">artist_id</string>
    <string name="extra_artist_name_key">artist_name</string>
    <string name="extra_current_position_key">position_current_id</string>
    <string name="extra_tracks_array_key">tracks_array</string>
    <string name="last_song_message">This is the last song</string>
    <string name="first_song_message">This is the first song</string>
    <string name="fragment_dialog_key">fragment_dialog</string>
    <string name="label_progress_dialog">Loading...</string>
    <string name="action_share">Share</string>
    <string name="extra_preview_url_key">preview_url_track</string>
    <string name="extra_duration_key">extra_duration_total_key</string>
    <string name="extra_position_key">extra_current_position_key</string>
    <string name="pref_enable_notifications_key">media_notification</string>
    <string name="pref_enable_notifications_label">Media Playback Notification</string>
    <string name="pref_enable_notifications_true">Enabled (only for Lollipop and above)</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="extra_play_now_key">play_now_key</string>
    <string name="action_bar_btn_now_playing">Now Playing</string>


</resources>
